# uniffi-demo

./: .gitignore  Cargo.toml  README.md  build.rs  uniffi.toml
src/: lib.rs  math.rs  math.udl
