[package]
name = "uniffi-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "untitled"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
uniffi-cli = ["uniffi/cli"]

[dependencies]
uniffi = { version = "=0.28.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "=0.28.0", features = ["build"] }

[dev-dependencies]
uniffi = { version = "=0.28.0", features = ["bindgen-tests"] }